fixed overflow issues with css and added font and color

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,18 +26,23 @@
   font-weight: bold;
 }
 
-h3 {
-  color: white;
+.site-title {
+  color: #767676;
   font-family: 'Ubuntu Mono', monospace;
+  font-size: 48px;
 }
-
+.site-title:hover {
+  color: #45c09d;
+  font-weight: bold;
+}
 p {
   color: #505050;
   font-family: 'Ubuntu', sans-serif;
 }
 
 a {
-  color:white;
+  color:#45c09d;
+  z-index: 3;
 }
 
 #new-site {
@@ -75,17 +80,22 @@ textarea:focus {
   padding: 30px 40px 40px 30xp;
   margin-bottom: 30px;
 }
-.columns {
+/*.columns {
   padding: 10px;
-}
-.sites-boxes {
-  background-color: #45c09d;
-  padding: 30px 40px 40px 30px;
-  width: 600px;
+}*/
+.box-content {
+  background-color: #e6e6e6;
+  padding: 40px 50px 50px 50px;
   height: 500px;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 20px;
+  margin-right: 20px;
+  border-radius: 10px;
+  overflow: hidden;
 }
 .row {
   max-width: 2000px;
+}
+label {
+  color: #505050;
+  font-family: 'Ubuntu', sans-serif;
 }
